--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,10 @@
 Fonts
 ============================= 
  */
-@font-face {
+/* @font-face {
   font-family: "Outfit";
   src: url(../fonts/Outfit-VariableFont_wght.ttf) format(truetype);
-}
+} */
 
 /*
 =============================
